# ai-content-organizer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/docs/: api_endpoints.md  building_the_project.md  project_overview.md  running_tests.md  service_architecture.md
backend/src/: __init__.py  __main__.py
backend/src/application/chat_engine/: __init__.py
backend/src/application/chat_engine/services/: __init__.py
backend/src/application/content_ingestion/: __init__.py
backend/src/application/content_ingestion/services/: __init__.py
backend/src/application/knowledge_base/: __init__.py
backend/src/config/: database.py  logging_config.py  settings.py
backend/src/domain/: __init__.py
backend/src/domain/chat_engine/: __init__.py
backend/src/domain/chat_engine/models/: __init__.py
backend/src/domain/content_ingestion/: __init__.py  extractors.py
backend/src/domain/content_ingestion/models/: __init__.py
backend/src/domain/knowledge_base/: __init__.py
backend/src/domain/knowledge_base/models/: __init__.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/api/: app.py
backend/src/infrastructure/api/routes/: content.py
backend/src/infrastructure/clients/: __init__.py
backend/tests/python/: conftest.py  test_app.py  test_database.py  test_imports.py  test_main.py  test_settings.py
backend/tests/python/integration/: test_content_api.py
backend/tests/python/unit/: test_linkedin_extractor.py
backend/tests/resources/: chat.http  content.http  health.http  knowledge.http
bot/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
bot/docs/: code_conventions.md  running_tests.md
bot/src/: __init__.py  __main__.py  bot.py
bot/src/clients/: __init__.py  backend_client.py
bot/src/config/: __init__.py  settings.py
bot/src/handlers/: add_handler.py  start_handler.py
bot/tests/python/: conftest.py  test_add_handler.py  test_backend_client.py  test_imports.py  test_main.py  test_settings.py  test_start_handler.py
bot/tests/python/fixtures/: __init__.py
docs/: code_conventions.md  feature_status.md  service_architecture.md
src/: __main__.py
(+3 files in other folders)
