[project]
name = "ai-content-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\\.pyi?$'
exclude = '''
/(
        \.venv
    | build
    | dist
    | \.git
)/
'''
preview = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]                             # Black handles line length
exclude = ["**/.venv/**", "build", "dist", ".git"]
fix = true
